# dprint-plugin-asciidoc

./: .gitignore  Cargo.toml  README.adoc  WALKTHROUGH.md  dprint.jsonc
.github/workflows/: ci.yml  npm-publish.yml
npm/: README.md  install.js  package.json
src/: configuration.rs  format.rs  lib.rs
