[package]
name = "dprint-plugin-asciidoc"
version = "0.1.0"
authors = ["Antigravity"]
edition = "2021"
license = "MIT"
description = "AsciiDoc formatter plugin for dprint"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "generate-schema"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
asciidoc-parser = "0.14"
dprint-core = { version = "0.67", features = ["wasm"] }
schemars = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
